Testing navigation overflow fix.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -27,11 +27,12 @@ blockquote:before {
     background-color: @color-swatch1;
     z-index: 9999;
     width: 240px;
-    height: calc(100% - 6.4em);
+    //height: calc(100% - 6.4em);
+    height: 85%;
     position: fixed;
     overflow-x: hidden;
     overflow-y: auto;
-    top: 6.4em;
+    //top: 6.4em;
     left: 0px;
 }
 
@@ -40,7 +41,7 @@ blockquote:before {
 }
 
 .main {
-    padding: 6em 2.5em 0 2.5em;
+    padding: 0 2.5em 0 2.5em;
     .widget {
         clear: both;
     }
@@ -53,8 +54,13 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 /* DEFAULT PAGE TYPE */
 
 .bk-pt-default .main {
-  padding-top: 6em;
+  //padding-top: 6em;
   min-height: 600px;
+}
+
+.bk-pt-homepage,
+.bk-pt-default {
+  padding-top: 6%;
 }
 
 /* ===============================
